tests/fixtures/invalid/min_set_dict.py
# Cannot call min() with Set[int], Dict[str, int]
x = min({1, 2, 3}, {"a": 1})
